--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "isparta-loader": "^2.0.0",
     "jade": "^1.11.0",
     "jasmine-core": "^2.4.1",
+    "jquery": "^2.2.3",
     "json-loader": "^0.5.4",
     "karma": "^0.13.15",
     "karma-coverage": "^0.5.5",
